fixed overflow

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -158,6 +158,7 @@ main {
   box-sizing: border-box;
   text-align: center;
   position: relative;
+  overflow: hidden;
   .confetti {
     display: flex;
     justify-content: space-between;
